--- a/frontend/src/locales/enUs.json
+++ b/frontend/src/locales/enUs.json
@@ -6,5 +6,6 @@
     "my-bids": "My Bids",
     "calendar": "Calendar",
     "notifications": "Notifications",
-    "settings": "Settings"
+    "settings": "Settings",
+    "profile" : "Profile"
 }
