--- a/frontend/src/locales/ptBr.json
+++ b/frontend/src/locales/ptBr.json
@@ -6,5 +6,6 @@
     "my-bids": "Meus Lances",
     "calendar": "Calendário",
     "notifications": "Notificações",
-    "settings": "Configurações"
+    "settings": "Configurações",
+    "profile" : "Perfil"
 }
