Estrutura Simples Gráficos

--- a/frontend/src/locales/enUs.json
+++ b/frontend/src/locales/enUs.json
@@ -38,5 +38,7 @@
     "city": "City",
     "number": "Number",
     "notes": "Notes",
-    "save": "Save"
+    "save": "Save",
+
+    "sales": "Sales"
 }
