--- a/frontend/src/locales/ptBr.json
+++ b/frontend/src/locales/ptBr.json
@@ -38,5 +38,7 @@
     "city": "Cidade",
     "number": "Número",
     "notes": "Observações",
-    "save": "Salvar"
+    "save": "Salvar",
+
+    "sales": "Vendas"
 }
